<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">fruit_ninja</string>
    <string name="app_title">Android Fruit Ninja!</string>
    <string name="button_start">START</string>
    <string name="button_exit">EXIT</string>
    <string name="button_resume">RESUME</string>
    <string name="button_pause">PAUSE</string>
    <string name="button_back">BACK</string>
    <string name="button_restart">RESTART</string>
    <string name="title_activity_start">FruitNinja</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>

</resources>
